--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,14 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  "type":"module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.9.0",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
