add video call function

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,9 @@
-VITE_BACKEND_URL='http://10.10.1.60:5000'
+# Backend URLs for different access methods
+# Localhost URL - used when you access the site via localhost
+VITE_LOCALHOST_BACKEND_URL='http://localhost:5001'
+
+# Ngrok URL - will be set when you run ngrok (leave empty for now)
+VITE_NGROK_BACKEND_URL='https://gatelike-elliott-unexperientially.ngrok-free.dev'
+
+# Network backend URL (auto-detected based on your local IP)
+VITE_NETWORK_BACKEND_URL=''
